Test github actions restart droplet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Welcome to Web Media Converter</h1>
     <p>Convert media files to any format</p>
-    test
+    <h1>test</h1>
     <br>
     <main>
         <form id="convert" action="event.preventDefault();">
