Add an about section to the frontend #16

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,19 @@
         </form>
         <div id="convert-loader" class="loader"></div>
         <p id="user-feedback"></p>
+        
+        <br>
+        <section id="about">
+            <h1>About:</h1>
+            <p>
+                Web Media Converter converts media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG). It currently supports the following file formats:
+            </p>
+            <ul id="supported-formats-list"><li>loading...</li></ul>
+            <p>
+                Unsupported conversions:
+                SVG to any other image format
+            </p>
+        </section>
     </main>
 </body>
 </html>
