Add more testing files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
         <section id="about">
             <h2>About:</h2>
             <p>
-                Web Media Converter converts media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG). It currently supports the following file formats:
+                Web Media Converter is an online tool for bulk file conversion of media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG). It currently supports the following file formats:
             </p>
             <table id="supported-formats-table">
                 <tr>
