--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
             <div id="convert-options">
                 <label for="format-select">Convert to:</label>
                 <select id="format-select">
-                    <option value="please select something to convert">please select something to convert</option>
+                    <option value="please select a file">please select a file</option>
                 </select>
                 <br>
             </div>
