Test application and fix bugs #18

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,12 +45,18 @@
         <div id="convert-loader" class="loader"></div>
         <p id="download-again">To download again, click <a id="download-again-link">here</a></p>
 
-        <br><br>
+        <br>
+        <p>Note that large files (like videos) can take several minutes to convert and download.</p>
+        <br>
+
         <section id="about">
             <h2>About:</h2>
             <p>
-                Web Media Converter is an online tool for bulk file conversion of media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG). It currently supports the following file formats:
+                Web Media Converter is an online tool for bulk file conversion of media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG).
             </p>
+
+            <br>
+            <h3>Supported Formats:</h3>
             <table id="supported-formats-table">
                 <tr>
                     <th>Image</th>
@@ -62,9 +68,27 @@
                     <td>loading...</td>
                 </tr>
             </table>
-            <p>
-                Unsupported conversions: Any other format to SVG
-            </p>
+
+            <br>
+            <h3>Unsupported Conversions:</h3>
+            <table>
+                <tr>
+                    <th>From</th>
+                    <th>To</th>
+                </tr>
+                <tr>
+                    <td>Any image format</td>
+                    <td>SVG</td>
+                </tr>
+                <tr>
+                    <td>WEBP</td>
+                    <td>TIF</td>
+                </tr>
+                <tr>
+                    <td>FLV</td>
+                    <td>MKV</td>
+                </tr>
+            </table>
         </section>
 
         <br><br><br>
