Fix unsupported conversions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
                     <td>SVG</td>
                 </tr>
                 <tr>
-                    <td>WEBP</td>
+                    <td>Any image format</td>
                     <td>TIF</td>
                 </tr>
                 <tr>
