--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <title>Web Media Converter</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <link id="dark-styles" rel="stylesheet" href="">
-    <script type="text/javascript" src="script.js" defer></script>
+    <link id="dark-styles" rel="stylesheet">
+    <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/f00e7b6fed.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,9 +25,10 @@
     <main>
         <form id="convert" action="event.preventDefault();">
             <div id="file-select">
-                <input type="file" webkitdirectory directory multiple id="file-input" oninput="updateToFormats();"/>
+                <input type="file" multiple id="file-input" oninput="updateToFormats();">
+                <br><br>
+                make sure all files are the same media type
                 <br>
-                (choose a folder of files to convert)
             </div>
             <br>
             <div id="convert-options">
@@ -52,7 +53,7 @@
         <section id="about">
             <h2>About:</h2>
             <p>
-                Web Media Converter is an online tool for bulk file conversion of media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG).
+                Web Media Converter is an online tool for file conversion of media files like image, video or audio files into other formats of the same media type (eg. JPG to PNG).
             </p>
 
             <br>
@@ -66,6 +67,7 @@
                 <tr id="supported-formats-placeholder">
                     <td></td>
                     <td>loading...</td>
+                    <td></td>
                 </tr>
             </table>
 
