Fix backend invalid_conversions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Web Media Converter</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <link id="dark-styles" rel="stylesheet">
+    <link id="dark-styles" rel="stylesheet" href="">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/f00e7b6fed.js" crossorigin="anonymous"></script>
 </head>
